# turtlesim-nav

./: .clangd  .gitignore  LICENSE  README.md  pixi.toml  pyrightconfig.json
.cache/clangd/index/: follow_path_node.cpp.CD79DE30816B6B2A.idx  follow_path_node.h.305B06D92A4CB6E9.idx
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/follow_path/include/follow_path/follow_path/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/follow_path/include/follow_path/follow_path/srv/: go_to.h  go_to.hpp
install/follow_path/include/follow_path/follow_path/srv/detail/: go_to__builder.hpp  go_to__functions.h  go_to__rosidl_typesupport_fastrtps_c.h  go_to__rosidl_typesupport_fastrtps_cpp.hpp  go_to__rosidl_typesupport_introspection_c.h  go_to__rosidl_typesupport_introspection_cpp.hpp  go_to__struct.h  go_to__struct.hpp  go_to__traits.hpp  go_to__type_support.h
install/follow_path/lib/follow_path/: follow_path_node
install/follow_path/share/ament_index/resource_index/package_run_dependencies/: follow_path
install/follow_path/share/ament_index/resource_index/parent_prefix_path/: follow_path
install/follow_path/share/ament_index/resource_index/rosidl_interfaces/: follow_path
install/follow_path/share/follow_path/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/follow_path/share/follow_path/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_follow_path__rosidl_generator_cExport-noconfig.cmake  export_follow_path__rosidl_generator_cppExport.cmake  follow_pathConfig-version.cmake  follow_pathConfig.cmake  follow_path__rosidl_typesupport_cppExport-noconfig.cmake  follow_path__rosidl_typesupport_introspection_cppExport-noconfig.cmake  follow_path__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/follow_path/share/follow_path/environment/: ament_prefix_path.dsv  ament_prefix_path.sh  path.dsv  path.sh  pythonpath.dsv  pythonpath.sh
install/follow_path/share/follow_path/srv/: GoTo.idl  GoTo.srv  GoTo_Request.msg  GoTo_Response.msg
log/: latest_build
rerun/: turtle_nav.rbl
src/: README.md
src/follow-path/: CMakeLists.txt  package.xml
src/follow-path/include/: dynamics.h  follow_path_node.h  kinematics.h
src/follow-path/launch/: run.launch.py
src/follow-path/src/: follow_path_node.cpp  point_stabilizer.cpp
src/follow-path/test/: utest_follow.cpp
src/turtle_nav/: CMakeLists.txt  package.xml
src/turtle_nav/include/: point_stabilizer.h  spline.h  trajectory_tracker.h  turtle_nav_node.h  utils.h
src/turtle_nav/launch/: run.launch.py
src/turtle_nav/src/: dynamics.cpp  kinematics.cpp  point_stabilizer.cpp  spline.cpp  trajectory_tracker.cpp  turtle_nav_node.cpp  utils.cpp
src/turtle_nav/srv/: FollowPath.srv  GoTo.srv
src/turtle_nav/test/: utest_utils.cpp
